# redroid-cpp

./: .dockerignore  .gitignore  BUILD_GUIDE.md  BUILD_WINDOWS.md  CMakeLists.txt  CMakeLists.txt.qt6  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MODULE_ARCHITECTURE.md  MODULE_TREE.txt  PROJECT_REPORT.md  README.md  WINDOWS_BUILD.md  WINDOWS_GUIDE.md  WINDOWS_SETUP.md  adb-connect.bat  build-release.bat  build-win.bat  build-windows.bat  docker-compose.yml  launch-gui.bat  start.bat  verify_bypass.bat
.github/workflows/: build.yml  docker.yml  release.yml
docker/: Dockerfile  Dockerfile.custom  docker-compose.virtualphonepro.yml  docker-compose.yml  entrypoint.sh  init_cellular_network.sh  patch_system.sh
docker/configs/: default.properties
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  FEATURES.md  NETWORK_ISOLATION.md  PHASE2_CORE_ENGINE.md  PHASE3_DOCKER_INTEGRATION.md  PHASE4_ADB_BRIDGE.md  PHASE5_QT6_GUI.md  PHASE6_PROFILE_ENGINE.md
gui/: ReDroidGUI.pro  about_dialog.cpp  about_dialog.h  anti_detection_panel.cpp  anti_detection_panel.h  dashboard.cpp  dashboard.h  device_profile_manager.cpp  device_profile_manager.h  devicecard.cpp  devicecard.h  log_viewer.cpp  log_viewer.h  main.cpp  mainwindow.cpp  mainwindow.h  network_panel.cpp  network_panel.h  settings_dialog.cpp  settings_dialog.h  simulation_panel.cpp  simulation_panel.h  vnc_viewer.cpp  vnc_viewer.h
gui/styles/: dark.css
include/Android/: FileSystemRealism.h  LocaleTimezoneManager.h  SensorInjector.h
include/Core/: DeviceManager.h  DeviceProfile.h
include/Data/: TACDatabase.h
include/Database/: FingerprintEngine.h
include/VirtualPhonePro/: ADBManager.hpp  APIServer.h  AdvancedAntiDetection.hpp  AdvancedRealisticSimulation.h  AdvancedSpoofing.hpp  AndroidRealismEngine.h  AppCloner.h  BankingAppSpoofer.h  BatteryPowerManager.h  CarrierNetworkSimulator.h  CryptoEmulator.hpp  CryptoUtils.hpp  DeepDeviceSpoofer.h  DeviceBehaviorManager.h  DeviceIDGenerator.hpp  DeviceIntegrityManager.h  DeviceProfile.h  EmulatorDetectionBypass.hpp  EnhancedDeviceProfile.h  FindMyDeviceManager.h  FridaXposedDetector.h  GoogleFacebookSpoofer.h  HALSimulation.h  HardwareAttestation.h  HardwareFingerprintSpoofer.h  HardwareFingerprintSpoofer.hpp  HttpClient.hpp  HyperRealisticTouchEmulator.hpp  HypervisorBypass.hpp  IPTimezoneConverter.hpp  Logger.hpp  MagiskPatcher.h  MultiInstanceManager.h  NetworkConfig.h  NetworkConfigManager.h  NetworkProfileManager.h  NetworkRealismEnhancer.h  NetworkStackSpoofer.hpp  OEMDeepSpoofing.h  PersistentIdentityManager.h  (+20 more)
profiles/: google_pixel_8_pro.json  huawei_p60_pro.json  index.json  oneplus_12.json  samsung_s24_ultra.json  xiaomi_14.json
scripts/: manage.sh
src/: AutoStartDialog.cpp  AutoStartDialog.h  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qtmain.cpp
src/Android/: FileSystemRealism.cpp  LocaleTimezoneManager.cpp  SensorInjector.cpp
src/Core/: DeviceManager.cpp  DeviceProfile.cpp  DeviceProfile_ctor.cpp
src/Data/: TACDatabase.cpp
src/Database/: FingerprintEngine.cpp
src/GUI/: AntiDetectionPanel.cpp  AntiDetectionPanel.h  CMakeLists.txt  DashboardWindow.cpp  DashboardWindow.h  MainWindow.cpp  MainWindow.h  PhoneWindow.cpp  PhoneWindow.h  main.cpp
src/ReDroidController/: ADBManager.cpp  APIServer.cpp  AdvancedAntiDetection.cpp  AdvancedRealisticSimulation.cpp  AdvancedSpoofing.cpp  AndroidRealismEngine.cpp  AppCloner.cpp  BankingAppSpoofer.cpp  BatteryPowerManager.cpp  CMakeLists.txt  CarrierNetworkSimulator.cpp  CryptoEmulator.cpp  CryptoUtils.cpp  DeepDeviceSpoofer.cpp  DeviceBehaviorManager.cpp  DeviceIDGenerator.cpp  DeviceIntegrityManager.cpp  DeviceProfile.cpp  EmulatorDetectionBypass.cpp  EnhancedDeviceProfile.cpp  FindMyDeviceManager.cpp  FridaXposedDetector.cpp  GoogleFacebookSpoofer.cpp  HALSimulation.cpp  HardwareAttestation.cpp  HardwareFingerprintSpoofer.cpp  HttpClient.cpp  HyperRealisticTouchEmulator.cpp  HypervisorBypass.cpp  IPTimezoneConverter.cpp  Logger.cpp  MagiskPatcher.cpp  MultiInstanceManager.cpp  NetworkConfig.cpp  NetworkProfileManager.cpp  NetworkRealismEnhancer.cpp  NetworkStackSpoofer.cpp  OEMDeepSpoofing.cpp  PersistentIdentityManager.cpp  PlayIntegrityManager.cpp  (+21 more)
tests/: CMakeLists.txt  Test_DetectionBypass.cpp  Test_UniqueDeviceGenerator.cpp
tools/: manage.sh
